; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_shlview.c_test_IOleWindow.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_shlview.c_test_IOleWindow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [14 x i8] c"got (0x%08x)\0A\00", align 1
@IID_IShellView = common dso_local global i32 0, align 4
@IID_IOleWindow = common dso_local global i32 0, align 4
@E_NOINTERFACE = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@E_NOTIMPL = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_IOleWindow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_IOleWindow() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = call i64 @SHGetDesktopFolder(i32** %1)
  store i64 %5, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @S_OK, align 8
  %8 = icmp eq i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @ok(i32 %9, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i64 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = bitcast i32** %2 to i8**
  %14 = call i64 @IShellFolder_CreateViewObject(i32* %12, i32* null, i32* @IID_IShellView, i8** %13)
  store i64 %14, i64* %4, align 8
  %15 = load i64, i64* %4, align 8
  %16 = load i64, i64* @S_OK, align 8
  %17 = icmp eq i64 %15, %16
  %18 = zext i1 %17 to i32
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @ok(i32 %18, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i64 %19)
  %21 = load i32*, i32** %2, align 8
  %22 = bitcast i32** %3 to i8**
  %23 = call i64 @IShellView_QueryInterface(i32* %21, i32* @IID_IOleWindow, i8** %22)
  store i64 %23, i64* %4, align 8
  %24 = load i64, i64* %4, align 8
  %25 = load i64, i64* @E_NOINTERFACE, align 8
  %26 = icmp eq i64 %24, %25
  %27 = zext i1 %26 to i32
  %28 = load i64, i64* %4, align 8
  %29 = call i32 @ok(i32 %27, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i64 %28)
  %30 = load i32*, i32** %2, align 8
  %31 = load i32, i32* @TRUE, align 4
  %32 = call i64 @IShellView_ContextSensitiveHelp(i32* %30, i32 %31)
  store i64 %32, i64* %4, align 8
  %33 = load i64, i64* %4, align 8
  %34 = load i64, i64* @E_NOTIMPL, align 8
  %35 = icmp eq i64 %33, %34
  %36 = zext i1 %35 to i32
  %37 = load i64, i64* %4, align 8
  %38 = call i32 @ok(i32 %36, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i64 %37)
  %39 = load i32*, i32** %2, align 8
  %40 = load i32, i32* @FALSE, align 4
  %41 = call i64 @IShellView_ContextSensitiveHelp(i32* %39, i32 %40)
  store i64 %41, i64* %4, align 8
  %42 = load i64, i64* %4, align 8
  %43 = load i64, i64* @E_NOTIMPL, align 8
  %44 = icmp eq i64 %42, %43
  %45 = zext i1 %44 to i32
  %46 = load i64, i64* %4, align 8
  %47 = call i32 @ok(i32 %45, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i64 %46)
  %48 = load i32*, i32** %2, align 8
  %49 = call i32 @IShellView_Release(i32* %48)
  %50 = load i32*, i32** %1, align 8
  %51 = call i32 @IShellFolder_Release(i32* %50)
  ret void
}

declare dso_local i64 @SHGetDesktopFolder(i32**) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i64 @IShellFolder_CreateViewObject(i32*, i32*, i32*, i8**) #1

declare dso_local i64 @IShellView_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i64 @IShellView_ContextSensitiveHelp(i32*, i32) #1

declare dso_local i32 @IShellView_Release(i32*) #1

declare dso_local i32 @IShellFolder_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
